--- a/src/app/core/admin/create-jalan/create-jalan.page.html
+++ b/src/app/core/admin/create-jalan/create-jalan.page.html
@@ -8,7 +8,7 @@
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title mode="ios">{{isEditMode ? 'Kemas Kini':'Daftar'}} Jalan</ion-title>
+    <ion-title mode="ios">{{isEditMode ? 'Kemas Kini':'Daftar Status'}} Jalan</ion-title>
     <ion-buttons slot="end" *ngIf="!isEditMode">
       <ion-button (click)="logout()">
         <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
