--- a/src/app/core/user/profile/profile.page.scss
+++ b/src/app/core/user/profile/profile.page.scss
@@ -41,6 +41,8 @@ ion-item {
         border-radius: 50%;
         background-color: #fff;
         padding: 3px;
+        height: 100%;
+        width: 100%
       }
     }
   }
@@ -64,4 +66,3 @@ ion-item {
   font-size: 10px;
   margin: 1px auto;
 }
-
