--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -54,7 +54,7 @@
 
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
     <ion-button color="warning" size="small" shape="round" expand="block" class="buttondaftar" (click)="routeToAduan()">Daftar<br>Aduan 
-      <ion-icon name="receipt-outline" slot="end" style="font-size: 25px;padding-right: 5px;">Daftar Aduan</ion-icon>
+      <ion-icon name="receipt-outline" slot="start" style="font-size: 25px;padding-left: 5px;">Daftar Aduan</ion-icon>
     </ion-button>
       <!-- <ion-fab-button class="custom-fab" color="warning" (click)="routeToAduan()">
         <ion-icon name="receipt-outline">Daftar Aduan</ion-icon>
