--- a/src/app/core/admin/statistic/statistic.page.html
+++ b/src/app/core/admin/statistic/statistic.page.html
@@ -18,6 +18,13 @@
   <div class="bg-primary">
   </div>
   <div class="center-box">
+
+    <ion-item>
+      <ion-select value="peperoni" interface="action-sheet" placeholder="Pilih">
+        <ion-select-option value="peperoni">Peperoni</ion-select-option>
+        <ion-select-option value="hawaii">Hawaii</ion-select-option>
+      </ion-select>
+    </ion-item>
     <div class="circle"></div>
     <div id="chartdiv" class="donut-chart">
     </div>
