--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -65,7 +65,7 @@
             <div *ngIf="(password.dirty || password.touched) && password.errors" class="error">
               <span *ngIf="password.errors?.required">Kata laluan diperlukan</span>
               <span *ngIf="password.errors?.minlength">Kata laluan mestilah lebih 8 patah perkataan <br></span>
-              <span *ngIf="password.errors?.pattern">Kata laluan mestilah dalam aksara</span>
+              <span *ngIf="password.errors?.pattern">Kata laluan mestilah dalam campuran huruf dan</span>
             </div>
             <div class="input">
               <ion-item>
@@ -88,7 +88,7 @@
             <ion-text color="primary">
               <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
             </ion-text>
-            <ion-button (click)="updateProfile()" [disabled]="profileForm.invalid" mode="ios" shape="round">
+            <ion-button (click)="updateProfile()" mode="ios" shape="round">
               Kemas Kini
             </ion-button>
           </ion-col>
