--- a/src/app/core/admin/statistic/statistic.page.html
+++ b/src/app/core/admin/statistic/statistic.page.html
@@ -20,12 +20,14 @@
   <div class="center-box">
 
     <ion-item>
-      <ion-select value="peperoni" interface="action-sheet" placeholder="Pilih">
-        <ion-select-option value="peperoni">Peperoni</ion-select-option>
-        <ion-select-option value="hawaii">Hawaii</ion-select-option>
+      <ion-select value="peperoni" interface="action-sheet" placeholder="Pilih" value="jumlah_aduan1">
+        <ion-select-option value="jumlah_aduan1">JUMLAH ADUAN</ion-select-option>
+        <ion-select-option value="jumlah_aduan2">JUMLAH ADUAN (BULANAN)</ion-select-option>
+        <ion-select-option value="jumlah_aduan3">JUMLAH ADUAN SETIAP AGENSI</ion-select-option>
+        <ion-select-option value="jumlah_aduan4">JUMLAH BILANGAN PENGGUNA</ion-select-option>
       </ion-select>
     </ion-item>
-    <div class="circle"></div>
+    <!-- <div class="circle"></div> -->
     <div id="chartdiv" class="donut-chart">
     </div>
   </div>
