--- a/src/app/core/admin/statistic/statistic.page.scss
+++ b/src/app/core/admin/statistic/statistic.page.scss
@@ -54,10 +54,17 @@ ion-item {
   --border-color: #3880ff;
   --border-radius: 10px;
   --border-style: solid;
-  --border-width: 8px;
   --color: #ffffff;
   --color-activated: #3880ff;
   --color-focused: #3880ff;
+  --color-hover: #3880ff;
+  --detail-icon-color: #989aa2;
+  --detail-icon-font-size: 16px;
+  --detail-icon-opacity: 1;
+  --highlight-color-focused: #0cd1e8;
+  --highlight-color-invalid: #f04141;
+  --highlight-color-valid: #10dc60;
+  --highlight-height: 0px;
   --inner-border-width: 8px;
   --inner-box-shadow: 4px 4px;
   margin: 60px;
