--- a/src/app/core/user/list/aduan-list/aduan-list.page.html
+++ b/src/app/core/user/list/aduan-list/aduan-list.page.html
@@ -17,7 +17,13 @@
 
       <ion-list>
         <div *ngFor="let aduan of aduans$|async" (click)="openDetailModal(aduan)">
-          <ion-badge color="secondary" mode="ios">{{aduan.status_desc === null ? 'Dalam Perhatian': aduan.status_desc}}</ion-badge>
+          <ion-badge *ngIf="aduan.status_code === null || aduan.status_code === 'P'" color="secondary" mode="ios">
+            {{aduan.status_desc === null ? 'Dalam Perhatian': aduan.status_desc}}
+          </ion-badge>
+          <ion-badge *ngIf=" aduan.status_code === 'S'" color="success" mode="ios">{{aduan.status_desc}}
+          </ion-badge>
+          <ion-badge *ngIf=" aduan.status_code === 'R'" color="danger" mode="ios">{{aduan.status_desc}}
+          </ion-badge>
           <ion-card>
             <ion-card-content>
               <ion-card-title>{{aduan.title}}</ion-card-title>
@@ -27,7 +33,7 @@
           </ion-card>
         </div>
       </ion-list>
-      
+
     </ion-content>
   </div>
 </ion-content>
