--- a/src/app/core/admin/statistic/statistic.page.html
+++ b/src/app/core/admin/statistic/statistic.page.html
@@ -16,9 +16,11 @@
 
 <ion-content [fullscreen]="true">
   <div class="bg-primary">
+    <ion-text color="medium" class="ion-text-center">
+      <h1 class="aduantotal">{{aduanTotal}}</h1>
+    </ion-text>
   </div>
   <div class="center-box">
-
     <ion-item>
       <ion-select value="peperoni" interface="action-sheet" placeholder="Pilih" value="jumlah_aduan1">
         <ion-select-option value="jumlah_aduan1">JUMLAH ADUAN</ion-select-option>
