--- a/src/app/core/admin/profile/profile.page.scss
+++ b/src/app/core/admin/profile/profile.page.scss
@@ -41,6 +41,8 @@ ion-item {
         border-radius: 50%;
         background-color: #fff;
         padding: 3px;
+        height: 100%;
+        width: 100%
       }
     }
   }
