--- a/src/app/core/admin/statistic/statistic.page.scss
+++ b/src/app/core/admin/statistic/statistic.page.scss
@@ -20,7 +20,7 @@ ion-toolbar {
   height: 55%;
   width: 100%;
   border-radius: 50%;
-  top: 130px;
+  top: 210px;
   position: absolute;
 
 }
@@ -67,7 +67,13 @@ ion-item {
   --highlight-height: 0px;
   --inner-border-width: 8px;
   --inner-box-shadow: 4px 4px;
-  margin: 60px;
+  margin: 50px 80px;
   --ripple-color: #1e1e1e;
   --transition: background-color 15ms linear;
+}
+
+h1.aduantotal{
+  margin-top: 140px;
+  font-weight: bold;
+  font-size: 60px;
 }
