--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -88,7 +88,7 @@
             <ion-text color="primary">
               <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
             </ion-text>
-            <ion-button (click)="updateProfile()" mode="ios" shape="round">
+            <ion-button (click)="updateProfile()" [disabled]="profileForm.invalid" mode="ios" shape="round">
               Kemas Kini
             </ion-button>
           </ion-col>
