--- a/src/app/modal/aduan-detail/aduan-detail.page.html
+++ b/src/app/modal/aduan-detail/aduan-detail.page.html
@@ -18,7 +18,13 @@
     <ion-content class="content">
       <br>
       <div style="margin: 10px 30px;">
-        <ion-badge color="tertiary" mode="ios">{{aduan.status_desc}}</ion-badge>
+        <ion-badge *ngIf="aduan.status_code === null || aduan.status_code === 'P'" color="secondary" mode="ios">
+          {{aduan.status_desc === null ? 'Dalam Perhatian': aduan.status_desc}}
+        </ion-badge>
+        <ion-badge *ngIf=" aduan.status_code === 'S'" color="success" mode="ios">{{aduan.status_desc}}
+        </ion-badge>
+        <ion-badge *ngIf=" aduan.status_code === 'R'" color="danger" mode="ios">{{aduan.status_desc}}
+        </ion-badge>
         <br><br>
         <ion-label>Tarikh Aduan: </ion-label><span style="color: white">{{aduan.created_at | date : 'dd MMM
           yyyy'}}</span>
