--- a/src/app/core/admin/profile/profile.page.scss
+++ b/src/app/core/admin/profile/profile.page.scss
@@ -42,7 +42,7 @@ ion-item {
         background-color: #fff;
         padding: 3px;
         height: 100%;
-        width: 100%
+        width: 100%;
       }
     }
   }
