--- a/src/app/core/admin/statistic/statistic.page.html
+++ b/src/app/core/admin/statistic/statistic.page.html
@@ -16,17 +16,17 @@
 
 <ion-content [fullscreen]="true">
   <div class="bg-primary">
-    <ion-text color="medium" class="ion-text-center">
+    <ion-text class="ion-text-center" (click)="openAduanList()">
       <h1 class="aduantotal">{{aduanTotal}}</h1>
     </ion-text>
   </div>
   <div class="center-box">
     <ion-item>
-      <ion-select value="peperoni" interface="action-sheet" placeholder="Pilih" value="jumlah_aduan1">
-        <ion-select-option value="jumlah_aduan1">JUMLAH ADUAN</ion-select-option>
-        <ion-select-option value="jumlah_aduan2">JUMLAH ADUAN (BULANAN)</ion-select-option>
-        <ion-select-option value="jumlah_aduan3">JUMLAH ADUAN SETIAP AGENSI</ion-select-option>
-        <ion-select-option value="jumlah_aduan4">JUMLAH BILANGAN PENGGUNA</ion-select-option>
+      <ion-select value="jumlah_aduan" interface="action-sheet" placeholder="Pilih" (ionChange)="selectAduan($event)">
+        <ion-select-option value="jumlah_aduan" >JUMLAH ADUAN</ion-select-option>
+        <ion-select-option value="jumlah_aduan_bulan">JUMLAH ADUAN (BULANAN)</ion-select-option>
+        <ion-select-option value="jumlah_aduan_agensi">JUMLAH ADUAN SETIAP AGENSI</ion-select-option>
+        <ion-select-option value="jumlah_aduan_pengguna">JUMLAH BILANGAN PENGGUNA</ion-select-option>
       </ion-select>
     </ion-item>
     <!-- <div class="circle"></div> -->
