--- a/src/app/auth/register/register-user/register-user.page.html
+++ b/src/app/auth/register/register-user/register-user.page.html
@@ -114,7 +114,7 @@
             <ion-text color="primary">
               <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
             </ion-text>
-            <ion-button (click)="submitUser()" [disabled]="regUserForm.invalid" mode="ios" shape="round">
+            <ion-button (click)="submitUser()" mode="ios" shape="round">
               Daftar
             </ion-button>
           </ion-col>
