--- a/src/app/core/global/alert/success/success.page.html
+++ b/src/app/core/global/alert/success/success.page.html
@@ -24,7 +24,7 @@
             <ion-card>
               <ion-card-content align="center">
                 <ion-text color="primary">
-                  <p>{{message}}</p>
+                  <p innerHtml="{{message}}"></p>
                 </ion-text>
               </ion-card-content>
             </ion-card>
