--- a/src/app/core/superadmin/profile/profile.page.html
+++ b/src/app/core/superadmin/profile/profile.page.html
@@ -46,7 +46,7 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number" disabled></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="text" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input2">
