--- a/src/app/core/admin/statistic/statistic.page.html
+++ b/src/app/core/admin/statistic/statistic.page.html
@@ -24,7 +24,7 @@
     <ion-item>
       <ion-select value="jumlah_aduan" interface="action-sheet" placeholder="Pilih" (ionChange)="selectAduan($event)">
         <ion-select-option value="jumlah_aduan" >JUMLAH ADUAN</ion-select-option>
-        <ion-select-option value="jumlah_aduan_bulan">JUMLAH ADUAN (BULANAN)</ion-select-option>
+        <!-- <ion-select-option value="jumlah_aduan_bulan">JUMLAH ADUAN (BULANAN)</ion-select-option> -->
         <ion-select-option value="jumlah_aduan_agensi">JUMLAH ADUAN SETIAP AGENSI</ion-select-option>
         <ion-select-option value="jumlah_aduan_pengguna">JUMLAH BILANGAN PENGGUNA</ion-select-option>
       </ion-select>
