--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -5,9 +5,10 @@
       <ion-grid>
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-            <div class="ion-text-center"> <br>
+            <div class="ion-text-center" style="margin: 60px auto;"> <br>
               <!-- <img src="./assets/img/jatanegara.png" alt="Jata Negara" width="100%"> -->
-              <h1 style="margin: 60px auto; color: white; font-weight: 500; font-size: 40px;">MyPotholes</h1>
+              <h1 style="margin-bottom: 0; color: white; font-weight: 500; font-size: 40px;">MyPotholes</h1>
+              <p style="font-size: 11px; color: whitesmoke">v1.0</p>
             </div>
             <ion-card>
               <ion-card-content>
@@ -28,9 +29,11 @@
                     <ion-label>Kata Laluan</ion-label>
                     <ion-item>
                       <!-- <ion-icon name="lock-open-outline" slot="end"></ion-icon> -->
-                      <ion-input id="logpass" type="{{showPass ? 'password' : 'text' }}" placeholder="Kata Laluan" formControlName="password" required>
+                      <ion-input id="logpass" type="{{showPass ? 'password' : 'text' }}" placeholder="Kata Laluan"
+                        formControlName="password" required>
                       </ion-input>
-                      <ion-icon slot="end" name="{{showPass ? 'eye-outline' : 'eye-off-outline' }}" (click)='hideShowPassword()'></ion-icon>
+                      <ion-icon slot="end" name="{{showPass ? 'eye-outline' : 'eye-off-outline' }}"
+                        (click)='hideShowPassword()'></ion-icon>
                     </ion-item>
                     <div *ngIf="(password.dirty || password.touched) && password.errors" class="errors">
                       <span *ngIf="password.errors?.required">Kata laluan diperlukan</span>
