--- a/src/app/core/admin/dashboard/dashboard.page.html
+++ b/src/app/core/admin/dashboard/dashboard.page.html
@@ -18,28 +18,25 @@
       </ion-list>
     </ion-toolbar>
 
-    <!-- <div>Address: {{address}}</div>
-    <div>Latitude: {{latitude}}</div>
-    <div>Longitude: {{longitude}}</div> -->
     <div #map id="map"></div>
 
     <ion-tab-bar slot="bottom" color-primary>
-      <ion-tab-button href="admin/profile">
+      <ion-tab-button (click)="openProfile()">
         <ion-icon name="person-outline"></ion-icon>
         <ion-label>Profil</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/admin/create-jalan">
+      <ion-tab-button (click)="openDaftarJalan()">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-label>Daftar</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="admin/statistic">
+      <ion-tab-button (click)="openStatistik()">
         <ion-icon name="analytics-outline"></ion-icon>
         <ion-label>Statistik</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/admin/jalan-list">
+      <ion-tab-button (click)="openHebahan()">
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
@@ -48,6 +45,7 @@
         <ion-icon name="log-out-outline"></ion-icon>
         <ion-label>Keluar</ion-label>
       </ion-tab-button>
+
     </ion-tab-bar>
   </ion-tabs>
 
