--- a/src/app/core/admin/jalan-list/jalan-list.page.scss
+++ b/src/app/core/admin/jalan-list/jalan-list.page.scss
@@ -47,13 +47,10 @@ ion-content.transparent {
 }
 
 .badge {
-  background-color: red;
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  display: inline-block;
+  margin-right: auto;
+  float: right;
 }
 
-p{
+p {
   margin-bottom: 0;
 }
