--- a/src/app/core/superadmin/admin-management/admin-management.page.html
+++ b/src/app/core/superadmin/admin-management/admin-management.page.html
@@ -1,14 +1,14 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/superadmin/dashboard">
+      <ion-button (click)="backRoute()">
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
 
     <ion-title mode="ios">Super Admin</ion-title>
 
-    
+
   </ion-toolbar>
 </ion-header>
 
@@ -25,7 +25,7 @@
         </ion-card-content>
       </ion-card>
       <hr>
-      <ion-card href="/superadmin/admin-list">
+      <ion-card (click)="openAdminList()">
         <ion-card-content>
           <ion-text color="light">
             <ion-icon size="large" name="people"></ion-icon>
@@ -34,7 +34,7 @@
         </ion-card-content>
       </ion-card>
       <hr>
-      <ion-card href="/superadmin/superadmin-list">
+      <ion-card (click)="openSuperAdminList()">
         <ion-card-content>
           <ion-text color="light">
             <ion-icon size="large" name="people"></ion-icon>
@@ -43,7 +43,7 @@
         </ion-card-content>
       </ion-card>
       <hr>
-      <ion-card href="/superadmin/create-jalan">
+      <ion-card (click)="createJalan()">
         <ion-card-content>
           <ion-text color="light">
             <ion-icon size="large" name="construct"></ion-icon>
