--- a/src/app/core/superadmin/list/admin-list/admin-list.page.html
+++ b/src/app/core/superadmin/list/admin-list/admin-list.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="superadmin/admin-management">
+      <ion-button (click)="backRoute()">
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -13,26 +13,32 @@
 
 <ion-content [fullscreen]="true">
   <div id="container" class="background">
-    <ion-list>
-      <ion-list-header>
-        <ion-label color="primary" size="small">SENARAI ADMIN</ion-label>
-      </ion-list-header>
-      <ion-card *ngFor="let user of users$|async" (click)="openDetailModal(user)">
-        <ion-grid>
-          <ion-row>
-            <ion-col size="9">
-              <ion-card-content>
-                <ion-card-title>{{user.name}}</ion-card-title>
-                <span class="text-limit">{{user.organisasi}}</span>
-              </ion-card-content>
-            </ion-col>
-            <ion-col size="3">
-            </ion-col>
-          </ion-row>
-          <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
-        </ion-grid>
-      </ion-card>
-    </ion-list>
+
+    <ion-list-header>
+      <ion-label color="primary" size="small">SENARAI ADMIN</ion-label>
+    </ion-list-header>
+
+    <ion-content class="transparent">
+
+      <ion-list>
+        <ion-card *ngFor="let user of users$|async" (click)="openDetailModal(user)">
+          <ion-grid>
+            <ion-row>
+              <ion-col size="9">
+                <ion-card-content>
+                  <ion-card-title>{{user.name}}</ion-card-title>
+                  <span class="text-limit">{{user.organisasi}}</span>
+                </ion-card-content>
+              </ion-col>
+              <ion-col size="3">
+              </ion-col>
+            </ion-row>
+            <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
+          </ion-grid>
+        </ion-card>
+      </ion-list>
+
+    </ion-content>
   </div>
 
 </ion-content>
