--- a/src/app/core/user/list/jalan-list/jalan-list.page.html
+++ b/src/app/core/user/list/jalan-list/jalan-list.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/user/dashboard">
+      <ion-button (click)="backRoute()">
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -19,20 +19,20 @@
         <p *ngIf="!haveInfo" class="ion-text-center" style="color:rgb(206, 206, 206)">Tiada maklumat hebahan</p>
         <ion-card *ngFor="let jalan of jalans$|async" (click)="openDetailModal(jalan)" color="light">
           <ion-grid fixed>
+            <ion-badge class="badge" color="danger" mode="ios">Ditutup</ion-badge>
             <ion-row>
-              <div class="badge"></div>
-              <ion-col size="6" rowspan="2">
+              <ion-col>
                 <ion-label>
-                  <br>
                   <ion-card-title>{{jalan.name}}</ion-card-title>
                 </ion-label>
-              </ion-col>
-              <ion-col size="4" style="font-size: 10px;">
-                <span>Mula : {{jalan.start_date | date : 'dd MMM yyyy'}} <br> Tamat : {{jalan.end_date | date : 'dd MMM yyyy'}}</span>
+                <br>
+                <p style="font-size: 10px;">Mula : {{jalan.start_date | date : 'dd MMM yyyy'}}</p>
+                <p style="font-size: 10px;">Tamat : {{jalan.end_date | date : 'dd MMM
+                  yyyy'}}</p>
               </ion-col>
             </ion-row>
             <ion-row>
-              <ion-col size="4"><p>Status: {{jalan.status}}</p></ion-col>
+              <!-- <ion-col size="4"><p>Status: {{jalan.status}}</p></ion-col> -->
             </ion-row>
             <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
           </ion-grid>
