--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -47,7 +47,7 @@
                     Masuk</ion-button>
                   <br>
                   <div class="ion-text-center">
-                    <ion-router-link color="primary" href="/forgot">Lupa Kata Laluan?</ion-router-link>
+                    <ion-router-link color="primary" (click)="openForgotPass()">Lupa Kata Laluan?</ion-router-link>
                   </div>
                 </div>
               </ion-card-content>
